@@ -1,4 +1,4 @@
-VERSION=1.2.18
+VERSION=1.2.19
 PYTHON=python
 
 help:
