@@ -1,4 +1,4 @@
-2014/06/20 (1.2.18)
+2014/06/20 (1.2.19)
 - Removed useless sticky label debug logging.
 - Changed label prefix from @ to a more convenient #.
 - Fixed track skipping with ices.
@@ -6,6 +6,7 @@
 - Monitor now checks children every 1 second, not 5.
 - Fixed 'tags' output when there aren't any tags.
 - New CLI command: ardj reload.
+- Listener counter no longer needs admin access to icecast2.
 
 2014/06/19 (1.2.15)
 - New command: ardj jabber probe.
